fix long zap comment text overflow (#344)

--- a/packages/app/src/Element/Reactions.css
+++ b/packages/app/src/Element/Reactions.css
@@ -92,6 +92,10 @@
   line-height: 17px;
 }
 
+.reactions-item .zap-comment {
+  width: 332px;
+}
+
 @media (max-width: 520px) {
   .reactions-view .tab.disabled {
     display: none;
